WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
CLOSED FIXED
39439
Spatial Navigation: using offset{Left,Top} is not enough to get the proper inner frames position
https://bugs.webkit.org/show_bug.cgi?id=39439
Summary
Spatial Navigation: using offset{Left,Top} is not enough to get the proper in...
Antonio Gomes
Reported
2010-05-20 11:40:39 PDT
in
https://bugs.webkit.org/show_bug.cgi?id=18662#c20
, darin expoited this: <quoted> (...) for (Frame* frame = renderer->document()->frame(); frame; frame = frame->tree()->parent()) { if (HTMLFrameOwnerElement* ownerElement = frame->ownerElement()) rect.move(ownerElement->offsetLeft(), ownerElement->offsetTop()); } It's not correct to use the offsetLeft and offsetTop of the frame owner element's renderer because that's just the distance from the offsetParent, not the absolute position. Instead you should use one of the localToAbsolute family of functions for this. (...) </quoted> this is a real problem needs fixing
Attachments
patch v1
(8.55 KB, patch)
2010-05-20 11:50 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
patch v1.1
(9.19 KB, patch)
2010-05-28 09:04 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
(committed in r61250, reviewed by kenneth)patch v1.2
(8.35 KB, patch)
2010-06-14 06:56 PDT
,
Antonio Gomes
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Antonio Gomes
Comment 1
2010-05-20 11:50:22 PDT
Created
attachment 56618
[details]
patch v1 patch does not use the localToAbsolute family, but works pretty much. Darin, do you mind having a look?
Antonio Gomes
Comment 2
2010-05-24 18:44:42 PDT
Ping review
Antonio Gomes
Comment 3
2010-05-28 09:04:32 PDT
Created
attachment 57334
[details]
patch v1.1 Same patch as v1, but now with an understandable ChangeLog text.
Antonio Gomes
Comment 4
2010-05-31 06:39:23 PDT
Comment on
attachment 57334
[details]
patch v1.1 new patch coming soon ...
Antonio Gomes
Comment 5
2010-06-14 06:56:30 PDT
Created
attachment 58641
[details]
(committed in
r61250
, reviewed by kenneth)patch v1.2 same as patch v1.1, applicable by the bots and rebased against tot.
Antonio Gomes
Comment 6
2010-06-15 10:01:30 PDT
Simon/kenneth, this should be a simple review. Can any of you help? Details in bug descritop
https://bugs.webkit.org/show_bug.cgi?id=39439#c0
Antonio Gomes
Comment 7
2010-06-15 10:02:56 PDT
> Details in bug descritop
https://bugs.webkit.org/show_bug.cgi?id=39439#c0
err, s/descritop/description
Antonio Gomes
Comment 8
2010-06-16 05:10:32 PDT
Comment on
attachment 58641
[details]
(committed in
r61250
, reviewed by kenneth)patch v1.2 Clearing flags on attachment: 58641 Committed
r61250
: <
http://trac.webkit.org/changeset/61250
>
Simon Hausmann
Comment 9
2010-06-17 01:36:20 PDT
Revision
r61250
cherry-picked into qtwebkit-2.0 with commit 20f69610e4b79964c79d0f5382e8282fde476f28
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug